fix(TDOPS-5103): Fix the notification is covered by detail drawer

--- a/packages/theme/src/theme/_guidelines.scss
+++ b/packages/theme/src/theme/_guidelines.scss
@@ -53,7 +53,7 @@ $navbar-brand-logo-width: 75px !default;
 /// Drawer z-index
 /// should always stay lower than dialog z-index which is set to 1040
 /// @type Number (Unitless)
-$drawer-z-index: 100 !default;
+$drawer-z-index: 15 !default;
 
 /// Navbar form top and bottom width
 /// @type Number (Unit)
